--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="hero-overlay"></div>
         <div class="hero-content fade-in">
             <div class="logo-area">
-                <img src="spaceliner_icon_1024.png" alt="Icon" class="hero-icon">
+                <img src="spaceliner_icon_1024.jpg" alt="Icon" class="hero-icon">
                 <h1>SPACELINER</h1>
             </div>
             <p class="hero-tagline">SYNCED WITH THE GALAXY</p>
@@ -101,7 +101,7 @@
         <section id="download">
             <h2 class="sl-title">DOWNLOAD</h2>
             <div class="dl-card">
-                href="https://github.com/ONSOU2025/TCE-company-Data/releases/latest/download/Spaceliner_setup.zip" class="dl-button">DOWNLOAD LATEST (ZIP)</a>
+                <a href="https://github.com/ONSOU2025/Spaceliner/releases/download/Spaceliner_Installer/Spaceliner_setup.zip" class="dl-button" target="_blank">ACCESS GOOGLE DRIVE</a>
                 <div class="spec-grid">
                     <div class="spec-item">
                         <h4 class="sub-title">SYSTEM REQUIREMENTS</h4>
