--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li><a href="#top">TOP</a></li>
             <li><a href="#tracks">MUSIC</a></li>
             <li><a href="#judgement">SYSTEM</a></li>
+            <li><a href="#judgement">NEWS</a></li>
             <li><a href="#download">DOWNLOAD</a></li>
         </ul>
     </nav>
@@ -181,3 +182,4 @@
 </body>
 
 </html>
+
