--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <nav class="side-nav">
         <ul>
             <li><a href="#top">TOP</a></li>
+            <li><a href="#news">NEWS</a></li>
             <li><a href="#tracks">MUSIC</a></li>
             <li><a href="#judgement">SYSTEM</a></li>
-            <li><a href="#judgement">NEWS</a></li>
-            <li><a href="#download">DOWNLOAD</a></li>
+            <li><a href="#download">DL</a></li>
         </ul>
     </nav>
 
@@ -38,50 +38,40 @@
     </header>
 
     <main>
+        <section id="news">
+            <h2 class="sl-title">NEWS</h2>
+            <div id="news-container" class="news-scroll-area">
+                <p class="loading">INITIALIZING SYSTEM...</p>
+            </div>
+        </section>
+
         <section id="tracks">
             <h2 class="sl-title">TRACKLIST</h2>
             <div class="track-container">
-                
                 <div class="track-row side-l">
                     <div class="track-cell">
                         <span class="lv-label">Lv.1</span>
-                        <div class="track-text">
-                            <span class="title">メリーさんの羊</span>
-                            <span class="artist">KANKITU Remix</span>
-                        </div>
+                        <div class="track-text"><span class="title">メリーさんの羊</span><span class="artist">KANKITU Remix</span></div>
                     </div>
                 </div>
-
                 <div class="track-row side-r">
                     <div class="track-cell">
                         <span class="lv-label">Lv.4</span>
-                        <div class="track-text">
-                            <span class="title">$E=mc^2$</span>
-                            <span class="artist">Mathematical Beat</span>
-                        </div>
+                        <div class="track-text"><span class="title">$E=mc^2$</span><span class="artist">Mathematical Beat</span></div>
                     </div>
                 </div>
-
                 <div class="track-row side-l">
                     <div class="track-cell">
                         <span class="lv-label">Lv.5</span>
-                        <div class="track-text">
-                            <span class="title">Divine Retribution</span>
-                            <span class="artist">High-Speed Chaos</span>
-                        </div>
+                        <div class="track-text"><span class="title">Divine Retribution</span><span class="artist">High-Speed Chaos</span></div>
                     </div>
                 </div>
-
                 <div class="track-row side-r">
                     <div class="track-cell">
                         <span class="lv-label">Lv.6</span>
-                        <div class="track-text">
-                            <span class="title">P0pL0ck</span>
-                            <span class="artist">Digital Pulse</span>
-                        </div>
+                        <div class="track-text"><span class="title">P0pL0ck</span><span class="artist">Digital Pulse</span></div>
                     </div>
                 </div>
-
             </div>
         </section>
 
@@ -90,7 +80,7 @@
             <div class="result-ui-mock">
                 <div class="result-header">JUDGEMENT PARAMETER</div>
                 <div class="result-body">
-                    <div class="judge-row"><span class="label">SYNCED</span><span class="desc">完全同期（最高）</span></div>
+                    <div class="judge-row"><span class="label">SYNCED</span><span class="desc">完全同期</span></div>
                     <div class="judge-row"><span class="label">LINKED</span><span class="desc">接続</span></div>
                     <div class="judge-row"><span class="label">NOISE</span><span class="desc">誤差あり</span></div>
                     <div class="judge-row"><span class="label">LOST</span><span class="desc">紛失</span></div>
@@ -99,66 +89,16 @@
             </div>
         </section>
 
-        <section id="news">
-    <h2 class="sl-title">NEWS</h2>
-    <div id="news-container" class="news-scroll-area">
-        <p class="loading">LOADING DATA...</p>
-    </div>
-</section>
-
-<script>
-    async function loadNews() {
-        try {
-            // news.json を読み込み（同じディレクトリにある想定）
-            const response = await fetch('news.json');
-            const data = await response.json();
-            const container = document.getElementById('news-container');
-            container.innerHTML = ''; // ローディング表示を消去
-
-            data.newsList.forEach(item => {
-                const newsItem = document.createElement('div');
-                newsItem.className = 'news-item';
-
-                // 本文の改行コード(\n)を <br> に変換
-                const formattedBody = item.body.replace(/\n/g, '<br>');
-
-                let html = `
-                    <div class="news-meta">
-                        <span class="news-date">${item.date}</span>
-                        <h3 class="news-headline">${item.title}</h3>
-                    </div>
-                    <div class="news-body">${formattedBody}</div>
-                `;
-
-                // リンクがある場合のみボタンを表示
-                if (item.linkUrl) {
-                    html += `<a href="${item.linkUrl}" class="news-link" target="_blank">VIEW DETAILS</a>`;
-                }
-
-                newsItem.innerHTML = html;
-                container.appendChild(newsItem);
-            });
-        } catch (error) {
-            console.error('Error loading news:', error);
-            document.getElementById('news-container').innerHTML = '<p class="error">FAILED TO LOAD NEWS.</p>';
-        }
-    }
-
-    // 実行
-    loadNews();
-</script>
-
         <section id="download">
             <h2 class="sl-title">DOWNLOAD</h2>
             <div class="dl-card">
-                <a href="https://github.com/ONSOU2025/Spaceliner/releases/download/Spaceliner_Installer/Spaceliner_setup.zip" class="dl-button" target="_blank">ACCESS GOOGLE DRIVE</a>
+                <a href="https://github.com/ONSOU2025/Spaceliner/releases/download/Spaceliner_Installer/Spaceliner_setup.zip" class="dl-button" target="_blank">ACCESS DRIVE</a>
                 <div class="spec-grid">
                     <div class="spec-item">
                         <h4 class="sub-title">SYSTEM REQUIREMENTS</h4>
                         <ul>
                             <li>Windows 10 / 11 (64bit)</li>
-                            <li>macOS Big Sur (11.0) 以降</li>
-                            <li>Ubuntu 20.04 LTS 以降</li>
+                            <li>macOS Big Sur+</li>
                             <li>Intel Core i3 / 4GB RAM</li>
                         </ul>
                     </div>
@@ -166,8 +106,7 @@
                         <h4 class="sub-title">CAUTION</h4>
                         <ul>
                             <li>Zipは必ず「すべて展開」してください</li>
-                            <li>フォルダ名は「半角英数字」を推奨</li>
-                            <li>有線マウス・ヘッドセット推奨</li>
+                            <li>半角英数字のパスを推奨</li>
                         </ul>
                     </div>
                 </div>
@@ -179,7 +118,42 @@
         <p>PROJECT SPACELINER // BY KANKITU</p>
     </footer>
 
+    <script>
+        async function loadNews() {
+            try {
+                // キャッシュを回避するためにタイムスタンプを付与
+                const cacheBuster = new Date().getTime();
+                const response = await fetch(`news.json?v=${cacheBuster}`);
+                const data = await response.json();
+                const container = document.getElementById('news-container');
+                container.innerHTML = '';
+
+                data.newsList.forEach(item => {
+                    const newsItem = document.createElement('div');
+                    newsItem.className = 'news-item';
+                    const formattedBody = item.body.replace(/\n/g, '<br>');
+
+                    let html = `
+                        <div class="news-meta">
+                            <span class="news-date">${item.date}</span>
+                            <h3 class="news-headline">${item.title}</h3>
+                        </div>
+                        <div class="news-body">${formattedBody}</div>
+                    `;
+
+                    if (item.linkUrl) {
+                        html += `<a href="${item.linkUrl}" class="news-link" target="_blank">VIEW DETAILS</a>`;
+                    }
+
+                    newsItem.innerHTML = html;
+                    container.appendChild(newsItem);
+                });
+            } catch (error) {
+                console.error('Error:', error);
+                document.getElementById('news-container').innerHTML = '<p class="error">SYNC ERROR: FAILED TO LOAD DATA.</p>';
+            }
+        }
+        loadNews();
+    </script>
 </body>
-
 </html>
-
